--- a/blog/source/_posts/_青海四日游.md
+++ b/blog/source/_posts/_青海四日游.md
@@ -18,5 +18,14 @@
 湖名，估计是盛产盐而得来，所谓“茶卡”是藏语的“盐池”。开车近乎绕卡茶盐湖一圈才到了入口处。途中，可以看到和白云鬼混在一起的白色的卡茶盐湖。与青海湖的清亮透彻，小家碧玉不同，卡茶盐湖是洁白如雪，端庄肃穆，似乎诉说这它在古丝绸之路的辉煌。从远处可以清晰地看到山、云、人的倒影，大胆地阐释了对称美。偶尔一阵波纹荡漾开来，倒影也开始娇羞起来，变得若隐若现。为了防止我们这些凡夫俗子玷污盐湖的圣洁，在可以下去的地方，是需要穿上鞋套的。来盐湖的路上，有当地人，顶着烈日，叫卖着鞋套。可惜当时不知道鞋套是何用处，随没有管它。景区里边，鞋套却是需要15一双，贵了许多。为了近距离接触这座“天空之境”，忍痛买了两双。不过鞋套是防不住调皮的湖水的，在深些的地方，湖水还是跑进了鞋中。于是，将鞋袜脱下，扔在一旁，赤脚穿上鞋套。慢慢地踏进湖里，顿时感觉仿佛踩在了满是石子的不平整路上。从边缘处，躲避着黑色塌陷的无底洞，小心翼翼地向湖中心走去。云在水中的倒影，跟你玩起了你追我赶的游戏，总是不能把他们踩在脚下。老婆看着别人拍的彩色倒影的照片，很是羡慕，却是抓耳挠腮，不得其解。后来拉开了距离，才晓得高中学习的知识已经遗忘了，水的倒影和太阳产生的影子傻傻地分不清楚。
 我们游玩的时间是下午2点到5点。太阳毫不留情地把热量挥洒到大地上，遮掩伞仿佛也受不了这种热情，只有盐湖在那静静地享受着。烤熟的大地，驱赶着几乎快要中暑的我们，只得匆匆告别了秀丽的卡茶盐湖。车子里已经被蒸的热气腾腾，赶紧打开车窗，把冷风调到最低，我们却在车外享受着片刻的清凉。
 ## 祁连山草原 -- 7.14
-4天的行程很紧，时间催促着我们赶往下一个景点--祁连山草原。从炽烈的阳光下，开车到伸手不见五指的黑夜，终于在晚上十点的时候，在青海湖旁的泉吉乡圣洁宾馆投宿。其实应该先去卡茶盐湖的，只是提前预定了酒店的缘故，多跑了两百多公里。
+4天的行程很紧，时间催促着我们赶往下一个景点--祁连山草原。从炽烈的阳光下，开车到伸手不见五指的黑夜，终于在晚上十点的时候，在青海湖旁的泉吉乡圣洁宾馆投宿。晚餐是在天峻县的兄弟茶餐厅，条件和饭菜都不错，能在线程碰上一个有品位的餐馆，也是有些惊喜的。在路程上来说应该先去卡茶盐湖的，只是提前预定了酒店的缘故，多跑了两百多公里。
+早上起来在一家南方人开的小店里边解决了早餐。跟老板聊了几句，才知道幸好是在老婆暑假的时候来旅游的。青海湖到了十月份左右，赶上冷空气从这边过，那时候整天北风呼啸，也开始缺其氧来，是待不下去的。大部分人会在那时候去其他地方过冬，很多热闹的营业商店，都会关掉，外来人是适应不了高原上的秋冬的，后来晚上住宿的老板也如是说。吃完早饭，太阳就开始暴晒，不给人留一点清凉。顶着烈日行车，沿西莎线二十多公里处，有一片油菜花海。可以放心的停车，照相留念，没有人看管，也就无从收费。即使青海湖的油菜花却也比不上这的，有一个小亭子，用木头搭建的，却是不遮光的。在此，可以俯瞰整个花海，在风中摇曳，一望无际。
+继续行车，从一个特别小而难走的路，下了西莎线，进入了哈热段。与路途中的标语形成鲜明对比的，是凹凸不平，如羊肠小道的公路，时不时地还会有大坑给你惊喜。后来才知道，这样的路已经算是不错了。从哈热段上了省道204，到了盘大公路，才知道什么是山路，什么是山路十八弯，水路九连环。有很长一段公路是石子铺成的，慢速摇摇晃晃地通过，尤其是一段上山和下山的路，很多死弯。对于新手的我来说，都已经快绝望了，但也咬牙开出来了，给自己赞一个。在途中会遇到挡路的绵羊，如果是正对着它们还好，如果要是从后面超车，那是要难死了，鸣笛是不管用的，只能耐心等它们的主人驱赶或者它们从公路上转移了。从盘大公路转到西张线的时候，有一片可以休息的地方，可以清楚地看到远处悠悠白云下白蒙蒙的雪山。由于严重低估了开车经过山路的时间，到达百度地图导航的祁连山草原，已经是下午4点多了。也许是前几天没有休息好，也许是有些高原反应，开车却是不行了。只得到峨堡镇的牧家住宿住下，随后在附近转悠下来。晚上终于是尝了手抓羊肉，或许是我舌头没那么敏感，对吃食兴趣不大，却是感觉味道一般。在旅店老板的推荐下，去了藏民家参观。路途上还有藏民收拾好的牦牛粪便，估计是用来烧的。他们住宿的地方很奇特。搭建的帐篷，顶部是留出长条形的一块，即可以看到蔚然的天空，也让炉子冒出的烟能顺利跑出去。在门口周围是两堆东西，估计是晚上用来当门用的。帐篷的中间一个长条形的炉子，添加燃料的在一边，烧火的在另一边。他们是用羊粪当燃料的，炉子上边放着一大一小两个壶，是用来煮奶茶的。牧民也比较健谈，聊了些风土人情，还给了我们些虫草（可能是冬虫夏草），说是可以减轻高原反应，我们是后来才知道这个是冬虫夏草的。因为牧民忙着去收牦牛，所以没有能够穿上藏袍。他们用牦牛颈上的绳套绑到下面固定好的绳子上，防止晚上牦牛乱跑。
+第二天，早上起来，老婆就兴冲冲的拉着我，要去穿藏袍。我们到的时候，藏民正忙着用一人环抱的大铁盆熬煮酸奶，看到旁边已经熬好了一盆了。不知道他们是要卖出去，还是怎么。藏民帮老婆打理好藏袍，戴上帽子和挂饰。迎着朝阳，挥动着裙子，煞是好看。
+不过我们却是对所谓的祁连山草原失望起来，虽然周围都是草，但真没啥美景。后来才知道，这只是去张掖，七彩丹霞的必经之路，却算不上是美丽的草原。
 ## 卓尔山 --7.14
+从峨堡镇出发已经快十点了，主要是走的省道302，比昨天的路好走了许多。临近卓尔山的时候，就已经有零零星星的景点了。我们只在“林海听涛”的地方稍作停留，林是有的，不过涛却是悄悄溜走。在这可以清晰地看到远处的丹霞地貌，红绿相间，远处的雪山也若隐若现。
+中午的时候，赶到了卓尔山，车不能直接开进去，只能放到免费的停车场。门票加往返车费总共八十，摆渡车B线是上山的，A线是下山的。稍等片刻，就坐车上山了。路途也有许多美景，近处的黄色的油菜花，绿色的青稞点缀其间，接着就是红褐色的健壮岩石，远处的雪山，像是蒙着白色丝巾的朦胧大姑娘。上山的路是由木头堆砌而成，虽然不陡峭，但是也可以看出当时花费了巨大的人力物力。因为是顶着烈日爬山，高原上的紫外线也很强烈，秀色可餐的风景才能带来一丝慰藉。顺着木头铺成的路，一步步走到山顶，丝丝凉风拂面，带走了焦躁和困倦。山顶的起伏不大，可以绕山顶一圈，处处都是风景。从山顶上，可以俯视整个祁连县城，干净整洁，建筑与自然环境之间相辅相成，毫无违和感。建筑成功融入到自然景色之中，又成为其点睛之笔。这是座美丽的城市，是大自然的宠儿，在群山环抱中，八宝河静静流淌，让人有在此定居，从此不问世事，陶醉于美景的冲动。从山顶的另一面，能够望到远处为皑皑白雪所覆盖的牛心山。因为还要回程，只能与卓尔山依依惜别。
+来卓尔山，无论如何都要从省道204走一遭，才能说去祁连山草原旅游过。从祁连县出城不远，就可以听到“林海听涛”的涛了。林间清澈见底的小溪水从石间欢快流过，吸引着过路的游客。捧一把溪水，调皮地从指缝间滑落，凉飕飕的。继续走，就到了海拔4120的大冬树山垭口。终于可以体会“会当凌绝顶，一览众山小”。凛冽的风从山顶吹过，吹走了仅留下的热量，远处黑乎乎的云压了过来，不敢久留，急匆匆踩上油门，跑了。开车到吉龙沟附近，突然走进一副山水画里。画里面可以看到远处乌云下的青翠山脉，羊啊牛啊围着雪白的帐篷在欢乐地玩耍。一条小河从脚下静淌淌流过。我们像是那只掰棒子的熊，每一个可以泊车的地，都迫不及待地停车。期待前方有更美，更让人陶醉的景色，可又怕这是最后一处美景。走走停停，时间流逝太快，为了赶上投宿的地，只能一步三回头地慢慢开车走了。
+阳光从乌云缝隙里悄悄洒落，终是没有挣脱束缚，瓢盆大雨乍然惊现。大雨过后，彩虹偷偷在如洗的碧空中出现，沧桑劲壮的公路，构成一幅美丽画卷。就像卓尔山上的阿姨所说：如果我是一个画家，我就把眼前的景色画进画里；如果我是一个诗人，我就用最美丽的诗句，歌颂眼前的美景...。碧澈的天空，让人忍不住，仰天长啸。
+终究还是要走的。
