add some new thing

--- a/blog/source/_posts/单例实现方式.md
+++ b/blog/source/_posts/单例实现方式.md
@@ -2,7 +2,7 @@
 title: 单例实现方式
 date: 2017-07-30 11:41:43
 tags: [java]
-categories: java
+categories: [java]
 ---
 
 有时候需要采用延迟初始化来降低初始化类和创建对象的开销。双重检查锁定是常见的延时初始化技术。
