--- a/blog/source/_posts/二叉树的分层遍历.md
+++ b/blog/source/_posts/二叉树的分层遍历.md
@@ -2,7 +2,7 @@
 title: 二叉树的分层遍历
 date: 2017-06-17 19:48:32
 tags: [算法]
-categories: 算法
+categories: [算法]
 ---
 
 今天去面试的时候被问到二叉树的分层遍历，因为原来写Python脚本的时候自己用队列的方法写过一次 分层遍历。结果面试官说能不能用递归的方法，不用队列实现。唔，临时想没有想起来，因此记录一下。
