commit some new thing

--- a/blog/source/_posts/碰到过的问题.md
+++ b/blog/source/_posts/碰到过的问题.md
@@ -5,7 +5,8 @@ categories: ["other"]
 menu: "main"
 ---
 ### Java
-1. 在java中，对于读取文件乱码，可以通过以下方式来指定文件的编码`new InputStreamReader(new FileInputStream(file), "GBK")`
+1. 在java中，对于读取文件乱码，可以通过以下方式来指定文件的编码`new InputStreamReader(new FileInputStream(file), "GBK")` 或者 `Files.newBufferedReader(path, StandardCharsets.UTF_8)`
+2. `Cookie rejected [...]` 对于 Cookie rejected ，可能是机器配置了域名，但是没有使用域名访问机器。
 
 ### JavaScript 
 1. 在ipad上通过jquery绑定的click事件不生效，解决方法：
@@ -14,6 +15,7 @@ menu: "main"
     ```
 2. 使用java拼接json字符串时，不能用`\n`， 否则JavaScript不会识别。
 <!-- more -->
+
 ### CSS 
 1.含有画布内容隐藏时，获取画布可能会出现错误。隐藏方式修改为：
     ```css3
@@ -33,9 +35,9 @@ menu: "main"
   - 使用 `du -h --max-depth=1 /var`命令查看var下的文件，发现没有占用空间特别大的文件，总量也不够磁盘的100%
   - 使用`lsof -n | grep delete` 命令查看哪些进程使用了已经删除的文件，这些文件虽然已经删除，但是没有释放空间，解决方法是`kill`掉进程或者reboot
   - 可能是`inode`的总量达到磁盘上限，使用`df -i`查看`inode`使用情况。如果达到100%，可能是小文件过多，需要找到并清理这些文件
+2. linux 的 shell 脚本。如果是手动使用`sh shell.sh`执行没有问题，但是使用 crontab 或者 java 等程序调用时，执行错误或者与`sh shell.sh` 执行不一致。那么可能是环境变量不同所导致的，比如 `PATH`， 可以通过`export PATH=$PATH:...` 来解决。但是碰到过一次比较奇怪的问题，使用 `sh shell.sh` 执行数据查询没问题，但是使用 crontab 执行却总是没有结果。经过一段时间的调试，找问题，终于定位到是编码的问题。在`sh shell.sh`执行时，`$LANG=zh_CN.UTF-8`，但是在 crontab 执行时却是 `$LANG=en_US`，导致查询失败。在代码开头加入 `export LANG=zh_CN.UTF-8` 解决。
 
-
-### nginx
+### nginx resin
 1. 在nginx+resin的配置中，nginx总是报错：`upstream timed out (110: Connection timed out) while reading response header from upstream`。
    一般情况下是因为resin处理时间过长，没有返回结果。通过配置 nginx的 `location` 的超时时间来解决
    ```conf
@@ -45,10 +47,23 @@ menu: "main"
         hmux_pass hmux://resin_add;
    }
    ```
+2. nginx 不能连接上resin，说resin拒绝连接，浏览器访问出现502错误
+    解决方案：查看resin配置文件resin.xml或resin.conf，看配置的`host`是否与nginx配置的相同，端口号是否一致
+    ```xml
+      <cluster>
+        <srun server-id="" host="localhost" port="8080"/>
+      </cluster>
+    ```
+3. resin启动失败，查看日志，有`java.net.UnknownHostException`，编辑`/etc/hosts`文件，配置相应的host即可
 
 ### PHP
 1. php脚本中不能将 "+" 通过`urldecode($str)`正确解析，需要通过`rawurldecode($str)`解析
 2. PHP中双引号中的变量会被解析 
+
+
+### SQL
+1. 在MySQL插入操作时，抛出`java.sql.SQLException: Incorrect string value: '\xE4\xB8\xAD\xE5\x9B\xBD...' for column 'request'`异常
+  该异常是因为数据库表或者字段使用的字符集不支持这种编码，将数据库表或者字段采用的编码集设置成`utf8`
 
 ### Other
 1. 换个角度思考问题，往往能更好地解决问题。
