add some new things

--- a/blog/source/_posts/碰到过的问题.md
+++ b/blog/source/_posts/碰到过的问题.md
@@ -7,6 +7,34 @@ menu: "main"
 ### Java
 1. 在java中，对于读取文件乱码，可以通过以下方式来指定文件的编码`new InputStreamReader(new FileInputStream(file), "GBK")` 或者 `Files.newBufferedReader(path, StandardCharsets.UTF_8)`
 2. `Cookie rejected [...]` 对于 Cookie rejected ，可能是机器配置了域名，但是没有使用域名访问机器。
+3. 使用Java转换xslt时，可以通过 `TransformerFactory.newInstance("com.self.SelfConfig",com.self.SelfConfig.class.getClassLoader())`，其中 `com.self.SelfConfig` 是继承自 `TransformerFactoryImpl`，覆盖了其 `newTemplatesHandlers()` 方法的类。
+4. 在maven中使用java编译时，出现 `Compilation failed:internal java compiler error`，信息中有`Information:java:javacTask:源发行版1.8需要目标发行版1.8`。这是因为maven默认的编译版本不是1.8，修改`pom.xml`:
+  ```xml
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+  ```
+5. 引入 slf4j jar 包时，出现： `java.lang.IllegalAccessError: tried to access field org.slf4j.impl.StaticLoggerBinder.SINGLETON from class org.slf4j.LoggerFactory`。 
+   可能的原因是其他jar包中包含的 slf4j-api.jar 的版本比较低，解决方案是查找引入的jar包文件，哪一个包使用的 slf4j-api 版本比较低，如果是 maven，可以使用如下方式去掉低版本的jar：
+   ```xml
+    <exclusions>
+      <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+      </exclusion>
+  </exclusions>
+   ```
+
+6. eclipse 不能正确引用jar文件。 在jar文件上右键 -> Build Path -> add to path
 
 ### JavaScript 
 1. 在ipad上通过jquery绑定的click事件不生效，解决方法：
@@ -14,6 +42,7 @@ menu: "main"
     $(document).bind("click touchstart", function(){})
     ```
 2. 使用java拼接json字符串时，不能用`\n`， 否则JavaScript不会识别。
+3. 使用 zepto 时，如果 zepto 中压缩了 fx_methods.js，那么使用 `show()` 或 `hide()` 方法时，会在元素上加上一些动画类的属性，导致样式出问题。
 <!-- more -->
 
 ### CSS 
