add some newthings

--- a/blog/source/_posts/碰到过的问题.md
+++ b/blog/source/_posts/碰到过的问题.md
@@ -2,9 +2,12 @@
 title: 碰到过的问题
 tags: ["other"]
 categories: ["other"]
-menu: "main"
 ---
-### Java
+
+有时候碰到问题，只知道自己以前解决过。如何解决的，却是一点也想不起来了。故在此记录下，碰到过的问题，以待后续会用到。
+<!-- more -->
+
+# Java
 1. 在java中，对于读取文件乱码，可以通过以下方式来指定文件的编码`new InputStreamReader(new FileInputStream(file), "GBK")` 或者 `Files.newBufferedReader(path, StandardCharsets.UTF_8)`
 2. `Cookie rejected [...]` 对于 Cookie rejected ，可能是机器配置了域名，但是没有使用域名访问机器。
 3. 使用Java转换xslt时，可以通过 `TransformerFactory.newInstance("com.self.SelfConfig",com.self.SelfConfig.class.getClassLoader())`，其中 `com.self.SelfConfig` 是继承自 `TransformerFactoryImpl`，覆盖了其 `newTemplatesHandlers()` 方法的类。
@@ -43,7 +46,16 @@ menu: "main"
     ```
 2. 使用java拼接json字符串时，不能用`\n`， 否则JavaScript不会识别。
 3. 使用 zepto 时，如果 zepto 中压缩了 fx_methods.js，那么使用 `show()` 或 `hide()` 方法时，会在元素上加上一些动画类的属性，导致样式出问题。
-<!-- more -->
+4. 在定义一系列变量时，可能会随手如下定义：
+  ```javascript
+  var container = $("id"),
+    isFirst = isFirst === "true"; // isFirst 为已定义的变量
+  ```
+  这样会导致 `isFirst` 永远等于 `false`。 因为这相当于： 
+  ```javascript
+  var isFirst;  // undefined
+  isFirst = isFirst === "true"
+  ```
 
 ### CSS 
 1.含有画布内容隐藏时，获取画布可能会出现错误。隐藏方式修改为：
