--- a/blog/source/_posts/读书笔记/_读书笔记-之-程序员修炼之道--从小工到专家.md
+++ b/blog/source/_posts/读书笔记/_读书笔记-之-程序员修炼之道--从小工到专家.md
@@ -69,3 +69,71 @@ DBC(按照合约设计)核心是用文档记载软件模块的权利与责任，
 ## 死程序不说谎
 我们很容易掉进“那不可能发生”的心理状态。大多数人编写的代码都不检查文件是否能成功关闭，或者某个跟踪语句是否按照我们的预期写出。
 **如果出现问题，选择让程序崩溃，而不是破坏其他数据** 因为死程序带来的危害通常比有疾患的程序要小得多。
+
+## 何时使用异常
+关于异常的问题之一就是知道何时使用它们。异常应该很少作为程序的正常流程的一部分使用，应该保留给意外事件。
+假如，代码试图打开一个文件进行读取，而文件并不存在，应该引发异常么？
+这取决于实际情况。如果文件应该在那里，那么引发异常就有正当的理由，因为意外的事发生了；另一方面，如果不清楚文件是否应该存在，那么你找不到它看来不是异常，返回一个错误才是合适的。
+**将异常用于异常的情况**
+
+## 怎样配平资源
+编程时，有些资源是需要我们管理的：内存、事务、线程、文件等所有数量有限的事物。一般情况下，资源使用遵循一种可预测的模式：分配资源、使用资源、解除资源占用。
+但是，对于资源分配和解除分配的处理，需要始终如一的计划，即 **要有始有终**
+例如，一个例程需要配平对文件的使用：打开和关闭在同一个地方
+
+### 嵌套分配资源
+对于一次需要不止一个资源的例程，可以对资源分配的基本模式扩展，有如下建议：
+1. 以与资源分配的次序相反的次序解除资源的分配。这样，如果一个资源含有对另一个资源的引用，就不会造成资源被遗弃
+2. 在代码的不同地方分配同一组资源时，总是以相同的次序分配它们，这样能够降低死锁发生的可能。
+
+# 耦合
+把代码组织成最小模块，并限制它们之间的交互。如果随后出于这种必须替换某个模块，其他模块仍能继续工作。
+
+## 函数的得墨忒耳法则
+假如，我们编写一个类，生成科学记录似数据图。数据记录仪分布在世界各地，每个记录仪对象都含有一个地点兑现个，给出其位置及时区。想让用户选择记录仪，绘制其数据，并标上其正确的时区。可以：
+```java
+public void plotDate(Date date, Selection selcetion) {
+    TimeZone tz = selection.getRecorder().getLocation().getTimeZone();
+    ...
+}
+```
+
+但现在绘制程序将三个类耦合在一起：Selection、Record 和 Location。这种方式使得我们类的依赖类的数目增加，这导致了系统其它地方的无关改动影响你代码的风险的增加。例如，对Location做出改动，使它不在直接包含TimeZone，你也需要改动你的代码。
+如下使用所需的东西，是不是更好：
+```java
+public void plotDate (Date date, TimeZone tz) {
+    ...
+}
+plotDate(someDate, someSelection.getTimeZone());
+```
+
+这样程序将不会关心 TimeZone 来自哪个类，降低了风险。
+
+对象直接的横贯关系有可能很快带来依赖关系的组合爆炸：
+1. 导入的类的数量，比测试程序还要长
+2. 对某个模块简单的改动会传遍系统的一些无关模块
+3. 开发者害怕改动代码，因为他们不知道哪些代码可能会受到影响。
+
+我们可以使用德墨忒尔法则来设计我们的方法和函数，来达到： **使模块之间的耦合减至最少**
+
+得墨忒耳法则规定： **某个对象的任何方法都应该只调用属于如下情形的方法： 它自身；传入该方法的任何参数；它创建的任何对象；热河直接持有的组件对象** ：
+```java
+public class Demeter {
+    private A a;
+    private int func() {}
+    public void example(B b) {
+        C c;
+        int f = func(); // 它自身
+        b.invert();                // 传入该方法的任何参数
+        a = new A();
+        a.setActive();             // 它创建的任何对象
+        c.print();                // 任何直接持有的组件对象
+    }
+}
+```
+
+因为遵循得墨忒耳法则缩小了调用类的响应集的规模，以这种方式设计的类的错误也往往更少。但是与任何技术一样，我们必须平衡特定应用的各种正面因素和负面因素，通过违反法则，而换取速度的提升，是可以接受的。
+
+
+
+
