--- a/blog/source/_posts/DesignPatterns/_设计模式.md
+++ b/blog/source/_posts/DesignPatterns/_设计模式.md
@@ -15,31 +15,34 @@ title: 设计模式
 根据模式的目的，可以将模式分为：创建型（与对象的创建有关）、结构型（处理类或对象的组合）、行为型（对类或对象怎样交互和怎样分配职责进行描述）
 根据模式的范围，可以将模式分为：类（处理类和子类之间的关系，这些关系通过继承建立，是静态的）、对象（处理对象间的关系，这些关系在运行时刻是变化的，是动态的）
 
+### 创建型模式
+随着系统演化越来越依赖于对象复合而不是类继承，创建型模式变得更为重要。创建型模式有两个重要作用：将系统使用哪些具体的类的信息封装起来；隐藏了这些类的实例是如何被创建和放在一起的。**整个系统对于这些对象所知道的是由抽象类所定义的接口**
+
 名称  | 目的 | 范围 | 描述 
 :-----|:----|:----|:----
 Abstract Factory (抽象工厂)| 创建型 | 对象 | 提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类
+Factory Method| 创建型 | 类| 定义一个用于创建对象的接口，让子类决定将哪一个类实例化。Factory Method将一个类的实例化延迟到子类中
+Singleton | 创建型 | 对象 | 保证一个类只有一个实例，并提供一个访问它的全局访问点
+Prototype| 创建型 | 对象 | 用原型实例指定创建对象的种类，并且通过拷贝这个原型来创建新的对象
 Adapter (适配器)        | 结构型 | 类 |  将一个类的接口转换成客户希望的另外一个接口。Adapter模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作
 Bridge (桥接模式)       | 结构型 | 对象| 将抽象部分与它的实现部分分离，使它们都可以独立地变化
 Builder ()            | 结构型 | 对象 |将一个复杂对象构建与它的表示分离，使得同样的构建过程可以创建不同的表示
-Chain of Responsibility  | 行为型| 对象 | 为解除请求的发送者和接受者之间的耦合，而使多个对象都有机会处理这个请求。将这些对象连成一条链，并沿着这条链传递该请求，直到有一个对象处理它
-Command (命令模式)    |  行为型| 对象 | 将请求封装成一个对象，从而使你可用不同的请求对客户进行参数化；对请求排队或记录请求日志，以及支持可取消的操作
 Composite            | 结构型 | 对象|将对象组合成树形以表示“部分-整体”的层次结构。Composite使得客户对单个对象和复合对象的使用具有一致性
 Decorator           | 结构型 | 对象 | 动态地给一个对象添加一些额外的职责。就扩展功能而言，Decorator模式比生成子类方式更为灵活
 Facade        | 结构型 | 对象 | 为子系统中的一组接口提供一个一致的界面， Facade模式定义了一个高层接口，这个接口使得这一子系统更加容易使用
-Factory Method| 创建型 | 类| 定义一个用于创建对象的接口，让子类决定将哪一个类实例化。Factory Method将一个类的实例化延迟到子类中
 Flyweight   | 结构型 | 对象 | 运用共享技术有效地支持大量细粒度的对象
 Interpreter | 行为型 | 类| 给定一个语言，定义它的文法的一种表示，并定义一个解释器，该解释器使用该表示来解释语句中的句子
 Iterator    | 行为型 | 对象 | 提供一种方法顺序访问一个聚合对象中各个元素，而又不需暴露该对象的内部表示
 Mediator  | 行为型 | 对象 | 用一个中介对象来封装一系列的对象交互，中介者使各个对象不需要显示地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互
 Memento   | 行为型 | 对象 | 在不破坏封装性的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态。这样以后就可将该对象恢复到保存的状态
 Observer  | 行为型 | 对象 | 定义对象间的一种一对多的依赖关系，以便当一个对象的状态发生改变时，所有依赖他的对象都得到通知并自动刷新
-Prototype| 创建型 | 对象 | 用原型实例指定创建对象的种类，并且通过拷贝这个原型来创建新的对象
 Proxy     | 结构型 | 对象 | 为其他对象提供一个代理以控制对这个对象的访问
-Singleton | 创建型 | 对象 | 保证一个类只有一个实例，并提供一个访问它的全局访问点
 State     | 行为型 | 对象 | 允许一个对象在其内部状态改变时改变它的行为，对象看起来似乎修改了它所属的类
 Strategy  | 行为型 | 对象 | 定义一系列的算法，把他们一个个封装起来，并且使他们可以相互替换。本模式使算法的变化可独立于使用它的用户
 Template Method | 行为型 | 类 | 定义一个操作中的算法的骨架，而将一些步骤延迟到子类中。本模式使得子类可以不改变一个算法的结构就可以重新定义该算法的某些特定的步骤
 Visitor | 行为型 | 对象 | 表示一个作用于某对象结构中的各元素的操作。可以在不改变各元素的类的前提下定义作用于这些元素的新操作
+Chain of Responsibility  | 行为型| 对象 | 为解除请求的发送者和接受者之间的耦合，而使多个对象都有机会处理这个请求。将这些对象连成一条链，并沿着这条链传递该请求，直到有一个对象处理它
+Command (命令模式)    |  行为型| 对象 | 将请求封装成一个对象，从而使你可用不同的请求对客户进行参数化；对请求排队或记录请求日志，以及支持可取消的操作
 
 ### 对象
 面向对象设计最困难的部分是将系统分解成对象集合。因为要考虑许多因素：封装、粒度、依赖关系、灵活性、性能、演化、复用等等，他们都影响着系统的分解，并且这些因素通常还是相互冲突的。
