add some new thing

--- a/blog/source/_posts/algorithms/动态规划.md
+++ b/blog/source/_posts/algorithms/动态规划.md
@@ -27,15 +27,15 @@ title: 动态规划
 我们可以用子问题的总数和每个子问题需要考察多少种选择这两个因素的乘积来粗略分析动态规划算法的运行时间。对于钢条切割问题，共有n个子问题，每个子问题最多需要考察n中选择，因此运行时间是 O(n^2).
 动态规划方法中，我们通常会自底向上地使用最优子结构，首先求解子问题的最优解，然后求解原问题的最优解。在求解原问题过程中，我们需要在涉及的子问题中做出选择，选出能得到原问题最优解的子问题。
 
-### 是否是最优解
+## 是否是最优解
 在尝试使用动态规划时要注意问题是否有最优子结构。尤其注意两个子问题是否是无关的，即同一个原问题的一个子问题的解不影响另一个子问题的解。
 
-### 重叠子问题
+## 重叠子问题
 适合动态规划方法求解的最优化问题应该具备的第二个性质是 **问题的递归算法会反复地求解相同的子问题，而不是一直生成新的问题**
 一般来讲，不同子问题的总数是输入规模的多项式函数最好。如果递归算法反复求解相同的子问题，我们就称最优化问题具有重叠子问题性质。与之相对，适合用分治方法求解的问题通常在递归的每一步都生成全新的问题。
 **一个问题的自然递归算法的递归调用树中出现相同的子问题，而不同的子问题的总数很少时，动态规划算都能提高效率**。
 
-### 重构最优解
+## 重构最优解
 我们通常将每个子问题所做的选择存储在一个表里，这样就不用根据代价重构这些信息。就如钢条切割问题中的带备忘机制的递归算法。
 
 # 钢条切割
@@ -70,9 +70,9 @@ CUT-ROD(p,n)
 朴素递归算法之所以效率很低，是因为它反复地求解相同的子问题。**动态规划方法仔细安排求解顺序，对每个子问题只求解一次，并将结果保存下来**。如果随后要在此需要子问题的解，只需要查询保存的结果，而不用重新计算。**动态规划算法付出额外的内存空间来节省时间**
 动态规划有两种等价的实现方式：
 1. **带备忘录的自顶向下法**。 此方法仍按自然的递归形式编写过程，但过程中会保存每个子问题的解（数组或散列表等）。当需要一个子问题的解时，首先检查是否已经保存过此解，从而节省计算时间。
-    
+
     ```
-    MEMOIZED-CUT-ROD(p, u) 
+    MEMOIZED-CUT-ROD(p, u)
         let r[0...n] be a new array
         for i=0 to n
             r[i] = -∞
@@ -83,7 +83,7 @@ CUT-ROD(p,n)
             return r[n]
         if n == 0
             q = 0
-        else 
+        else
             q = -∞
             for i=1 to n
                 q = max(q, p[i] + MEMOIZED-CUT-ROD-AUX(p, n-i, r))
@@ -105,52 +105,103 @@ CUT-ROD(p,n)
 
 这两种方法具有渐近运行时间，由于没有频繁的递归函数调用开销，自底向上法的时间复杂度具有更小的系数。
 
-### 子问题图
+## 子问题图
 当考虑一个动态规划问题时，我们应该弄清楚所设计的子问题以及子问题之间的依赖关系。
 问题的子问题图准确地表达了问题间的依赖关系。它是一个有向图，每个顶点唯一地对应一个子问题。若子问题x的最优解需要直接用到子问题y的最优解，那么久会在子问题图中有一条从子问题x到子问题y的顶点的有向边。
 {% raw %}
-
-Open SVG
-
-Paste markup
-Demo
-Contribute
-About
-Powered by the incredible SVGO
-
-
-IMAGE
-CODE
-690 bytes - 42.6% saving
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="224.6 102 238.4 313"><defs><marker id="a" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-.5 -.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="b" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-.5 -.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="c" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-.5 -.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="d" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="e" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="f" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="g" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-.5 -.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="h" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="i" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="j" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker></defs><path d="M224.6 102H463v313H224.6V102z" fill="none"/><path d="M341 199c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 190.875)">3</text><path d="M341 259c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 250.875)">2</text><path d="M341 320c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 311.875)">1</text><path d="M341 138c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 129.875)">4</text><path d="M356 154v15.382" stroke="#323232" fill="none" marker-end="url(#a)"/><path d="M356 215v14.382" stroke="#323232" fill="none" marker-end="url(#b)"/><path d="M356 275v15.382" stroke="#323232" fill="none" marker-end="url(#c)"/><path d="M341 138c-48.4 0-48.4 121-15.236 121" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#d)"/><path d="M341 138c-72.8 0-72.8 182-15.236 182" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#e)"/><path d="M341 379c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 370.875)">0</text><path d="M341 138c-96.4 0-96.4 241-15.236 241" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#f)"/><path d="M356 336v13.382" stroke="#323232" fill="none" marker-end="url(#g)"/><path d="M371 199c48.4 0 48.4 121 15.236 121" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#h)"/><path d="M371 199c72 0 72 180 15.236 180" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#i)"/><path d="M341 259c-48 0-48 120-15.236 120" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#j)"/></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="224.6 102 238.4 313"><defs><marker id="a" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-0.5 -0.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="b" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-0.5 -0.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="c" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-0.5 -0.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="d" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="e" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="f" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="g" markerUnits="userSpaceOnUse" orient="auto" markerWidth="14.118" markerHeight="9.174" viewBox="-0.5 -0.688 14.118 9.174" refX="-.5" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" fill="#323232"/></marker><marker id="h" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="i" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker><marker id="j" markerUnits="userSpaceOnUse" orient="auto" markerWidth="16.236" markerHeight="10.551" viewBox="-1 -1.376 16.236 10.551" refX="-1" refY="3.899"><path d="M12 3.9L0 7.797V0z" stroke="#323232" stroke-width="2" fill="#323232"/></marker></defs><path d="M224.6 102H463v313H224.6V102z" fill="none"/><path d="M341 199c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 190.875)">3</text><path d="M341 259c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 250.875)">2</text><path d="M341 320c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 311.875)">1</text><path d="M341 138c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 129.875)">4</text><path d="M356 154v15.382" stroke="#323232" fill="none" marker-end="url(#a)"/><path d="M356 215v14.382" stroke="#323232" fill="none" marker-end="url(#b)"/><path d="M356 275v15.382" stroke="#323232" fill="none" marker-end="url(#c)"/><path d="M341 138c-48.4 0-48.4 121-15.236 121" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#d)"/><path d="M341 138c-72.8 0-72.8 182-15.236 182" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#e)"/><path d="M341 379c0-21.333 30-21.333 30 0s-30 21.333-30 0z" stroke="#323232" stroke-width="2" fill="#c0d4a3"/><text fill="#323232" font-size="13" x="4" y="13.325" font-family="Arial" font-weight="bold" text-anchor="middle" transform="translate(351 370.875)">0</text><path d="M341 138c-96.4 0-96.4 241-15.236 241" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#f)"/><path d="M356 336v13.382" stroke="#323232" fill="none" marker-end="url(#g)"/><path d="M371 199c48.4 0 48.4 121 15.236 121" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#h)"/><path d="M371 199c72 0 72 180 15.236 180" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#i)"/><path d="M341 259c-48 0-48 120-15.236 120" stroke="#323232" stroke-width="2" fill="none" marker-end="url(#j)"/></svg>
 {%endraw%}
 
-子问题图 G=(V, E) 的规模可以帮助我们确定动态规划算法的运行时间，由于每个子问题只求解一次，因此算法运行时间等于每个子问题求解时间之和。通常，一个子问题的求解时间与子问题图中对应顶点的度（出射边的数目）成正比，而子问题的数目等于子问题图的顶点数。因此，**动态规划算法的运行时间与定点和边的数量呈线性关系。
+子问题图 G=(V, E) 的规模可以帮助我们确定动态规划算法的运行时间，由于每个子问题只求解一次，因此算法运行时间等于每个子问题求解时间之和。通常，一个子问题的求解时间与子问题图中对应顶点的度（出射边的数目）成正比，而子问题的数目等于子问题图的顶点数。因此，**动态规划算法的运行时间与定点和边的数量呈线性关系**。
 
-### 重构解
+## 重构解
 在上述的 `BOTTOM-UP-CUT-ROD` 中，我们通过数组`s`保存了每个子问题的最优收益值。我们可以通过如下方式获取最优切割方案：
 ```
-PRINT-CUT-ROD-SOLUTION (p, n) 
+PRINT-CUT-ROD-SOLUTION (p, n)
     (r,s) = BOTTOM-UP-CUT-ROD(p,n)
     while n > 0
         print s[n]
         n = n - s[n]
 ```
 
-## 最长公共子序列
+# 最长公共子序列
 子序列定义：给定一个序列 X={x1,x2,...,xm}, 另一个序列 Z={z1,z2,...zk} 满足如下条件时成为 X 的子序列，即存在一个严格递增的 X 的下标序列 {i1,i2,...,ik}, 对于所有的j=1,2,...k, 满足 xi(j) = zi。
 
 公共子序列：给定两个序列X和Y，如果Z既是X的子序列，也是Y的子序列，那么成Z是X和Y的公共子序列
 
 最长子序列问题(LCS)：给定两个序列 X={x1,x2,...,xm} 和 Y={y1,y2,...,yn}, 求X和Y的公共子序列
 
-### 刻画最长公共子序列特征
+## 刻画最长公共子序列特征
 如果用暴力搜索方法求解LCS，就要穷举X的所有子序列，对每个子序列都要检查是否是Y的子序列，记录找到的最长子序列。X的每个子序列对应X的元素集合的一个子集，有2^m个子序列，因此暴力方法的运行时间为指数级。
 但是LCS问题具有最优子结构。令Z为X和Y的任意LCS：
-1. 如果xm = yn, 则zk = xm = yn, 且 Z\[k-1\] 是 X\[m-1] 和 Y\[n-1] 的一个LCS
-2. 如果xm ≠ yn, 那么zk ≠ xm, 意味着Z是X\[m-1] 和 Y 的一个LCS
-3. 如果xm ≠ yn, 那么zk ≠ yn, 意味着 Z是 X 和 Y\[n-1] 的一个LCS
+1. 如果$x_m = y_n$, 则$z_k = x_m = y_n$, 且 $Z_{k-1}$ 是 $X_{m-1}$ 和 $Y_{n-1}$ 的一个LCS
+2. 如果$x_m \neq y_n$, 那么$z_k \neq x_m$, 意味着Z是$X_{m-1}$ 和 $Y$ 的一个LCS
+3. 如果$x_m \neq y_n$, 那么$z_k \neq y_n$, 意味着$Z$是$X$和 $Y_{n-1}$的一个LCS
 
-### 一个递归解
-求解 X 和 Y 的一个 LCS时，我们需要求解一个或两个子问题。如果xm = yn, 我们应该求解 X\[m-1] 和 Y\[n-1] 的一个LCS。将xm = yn追加到这个LCS的末尾；如果xm ≠ yn，我们必须求解两个子问题：X\[m-1] 和 Y 的一个LCS 和 X 和 Y\[n-1] 的一个LCS，两个中较长者为 X 和 Y 的一个LCS
+## 一个递归解
+求解 X 和 Y 的一个 LCS时，我们需要求解一个或两个子问题。如果$x_m = y_n$, 我们应该求解 $X_{m-1}$ 和 $Y_{n-1}$ 的一个LCS。将$x_m = y_n$追加到这个LCS的末尾；如果$x_m \neq y_n$，我们必须求解两个子问题：$X_{m-1}$ 和 $Y$ 的一个LCS 和 $X$和 $Y_{n-1}$ 的一个LCS，两个中较长者为$X$和$Y$的一个LCS. 由于**这些情况覆盖了所有可能性**，因此我们知道必然有一个子问题的最优出现在$X$和$Y$的LCS中。
+很容易看出LCS问题具有重叠子问题性质。
+设计LCS问题的递归算法首先要建立最优解的d递归式。我们定义$c[i, j]$表示$X_i$和$Y_j$的LCS长度。根据LCS问题的最优子结构性质，可得如下公式：
+$$c[i,j] = \left\{ \begin{array}{ll}
+0 & \textrm{if $i=0$ or $j=0$}\\
+c[i-1,j-1]+1 & \textrm{if $i,j>0$ and $x_i \neq y_j$}\\
+max(c[i,j-1], c[i-1,j]) & \textrm{if $i,j>0$ and $x_i \neq y_j$}
+\end{array} \right.$$
 
+## 计算LCS的长度
+根据上面的公式，我们可以很容易地写出一个指数时间的递归算法来计算两个序列的LCS的长度。但是LCS问题只有$\Theta$个不同的子问题，因此，我们可以使用动态规划方法自底向上地计算。
+过程LCS-LENGTH接受两个序列$X={x_1, x_2, ..., x_m}$和$Y={y_1, y_2, ... , y_n}$为输入。它将值保存在$c[0...m,0...n]$中，并按**行主次序**计算表项（即首先由左至右计算c的第一行，然后计算第二行，依此类推）。过程还维护一个表$b[1...m, 1...n]$帮助构造最优解。
+```
+LCS-LENGTH(X, Y)
+    m = X.length
+    n = Y.length
+    let c[0...m,0...n] and b[1...m, 1...n] be new table
+    for i = 1 to m
+        c[i,0] = 0
+    for j = 0 to n
+        c[0,j] = 0
+    for i = 1 to m
+        for j = 1 to n
+            if X[i] == Y[j]
+                c[i,j] = c[i-1,j-1] + 1
+                b[i,j] = "left-top"
+            elseif c[i-1,j] >= c[i,j-1]
+                c[i,j] = c[i-1,j]
+                b[i,j] = "top"
+            elseif
+                b[i,j] = "left"
+    return c and b
+```
+
+## 构造LCS
+我们可以用LCS-LENGTH返回的b快速构造X和Y的LCS，只需从$b[m,n]$开始，按位置追踪下去即可
+```
+PRINT-LCS(b, X, i, j)
+    if i == 0 or j == 0
+        return
+    if b[i,j] == "left-top"
+        PRINT-LCS(b,X, i-1, j-1)
+        print X[i]
+    elseif b[i,j] == "top"
+        PRINT-LCS(b, X, i-1, j)
+    else PRINT-LCS(b, X, i, j-1)
+```
+
+## 算法改进
+一旦设计出一个算法，通常情况下都会有在时空开销上有改进的余地。对LCS算法，可以完全去掉表b，每个$c[i,j]$项只依赖于表c中的其他三项：$c[i-1,j], c[i,j-1],c[i-1,j-1]$，我们可以在$O(1)$的时间根据$c[i,j]$判断出使用了三项中的哪一项
+
+
+# 最优二叉搜索树
+**最优二叉搜索树** 的形式化定义如下：
+给定一个n个不同关键字的已排序的序列$K=\langle k_1,k_2, ..., k_n \rangle$(因此$k_1<k_2<...<k_n$)，对每个关键字$k_i$，都有一个概率$p_i$表示其搜索频率。有些要搜索的值可能不在$K$中，因此还有$n+1$个“伪关键字”$d_0, d_1, ..., d_n$表示不在$K$中的值。$d_0$表示所有小于$k_1$的值，$d_n$表示所有大于$k_n$的值，对$i=1,2,...,n-1$，伪关键字$d_i$表示所有在$k_i$和$k_{i+1}$之间的值。对每个伪关键字$d_i$，也都有一个概率$p_i$表示对应的搜索频率。
+那么最优二叉搜索树是指对于给定的集合我们希望构造一棵期望搜索代价最小的二叉搜索树。
+
+## 最优二叉树的结构
+如果一棵最优二叉搜索要$T$有一棵包含关键字$k_i, ... k_j$的子树$T_1$，那么T必然包含关键字$k_i, ... k_j$和伪关键字$d_{i-1}, ... d_j$的子问题的最优解。可以用剪切——粘贴法来证明：如果存在子树$T_2$，其期望搜索代价比$T_1$低，那么我们将$T_1$从$T$中删除，将$T_2$粘贴到相应位置，从而得到一棵期望搜索代价低于$T$的二叉搜索树，与$T$最优假设矛盾。
+
+## 一个递归算法
+选取子问题域为：求解包含关键字$k_i, ... k_j$的最优二叉搜索树，其中$i\ge 1, j\le n$且$j\ge i-1$，定义$e[i,j]$为在包含关键字$k_i, ... k_j$的最优二叉搜索树中进行一次搜索的期望代价。最终，希望计算出$e[1,n]$.
+
+
+
+- other thing
